# russian-morphology

./: BuildDict.hs  Data.hs  Grammem.hs  LICENSE  Main.hs  Morph.hs  Paths_rumorphology.hs  README.md  READMY.md  rumorphology.cabal  russian-morphology.cabal
Morph/: Data.hs  Parser.hs  Query.hs
Text/Morphology/: Russian.hs
Text/Morphology/Russian/: Data.hs  Parser.hs  Query.hs
static/css/: style.css
tmp/: Paths_rumorphology.hs
