name:                rumorphology
version:             0.1.0.0
-- synopsis:            
description:  Simple morphology for Russian language, only make normal form.       
homepage:            chemist.github.com
license:             BSD3
license-file:        LICENSE
author:              Smirnov Alexey
maintainer:          chemistmail@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >=1.8
data-files:          ru_RU-nojo.xml, morph.bin

library
  exposed-modules:     Text.Morphology.Russian, Text.Morphology.Russian.Data, Text.Morphology.Russian.Query, Text.Morphology.Russian.Parser
  other-modules: Paths_rumorphology
  -- other-modules:       
  build-depends:       base ==4.5.*, text ==0.11.*, bytestring ==0.9.*, binary ==0.5.*, containers ==0.4.*, resourcet ==0.4.*, conduit ==1.0.*, xml-conduit ==1.1.*, mtl ==2.1.*, transformers ==0.3.*, xml-types ==0.3.*
